change package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "quipy-new-year",
+  "name": "quipy-events-style",
   "version": "1.0.0",
   "description": "",
   "main": "new_year_script.js",
